--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
         </nav>
     </header>
     <main>
-        <h2>this is a sup heading</h2>
-        <p>some content here</p>
+        <div id="life-div">
+            <section>
+                <h2>this is a sup heading</h2>
+                <p>some content here</p>
+            </section>
+        </div>
     </main>
     <footer>
         <p>Copyright © Jing-An Chen. all rights reserved.</p>
