--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div id="borad">
-            <h1>A cute Broccoli</h1>
+            <h1>legendary Muffin</h1>
         </div>
         <nav>
             <ul>
