--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Midterm</title>
+    <title>Midterm-legendary Muffin</title>
     <!-- font -->
         <!-- head font -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,16 +25,42 @@
         <nav>
             <ul>
                 <li>HOME</li>
+                <span> </span>
                 <li>STORY</li>
+                <span> </span>
                 <li>CONTACT</li>
             </ul>
         </nav>
     </header>
     <main>
         <div id="life-div">
+            <!-- life -->
             <section>
-                <h2>this is a sup heading</h2>
-                <p>some content here</p>
+                <h2>Life of a Muffin</h2>
+                <p>Muffins, those delectable treats, 
+                    come in a variety of flavors and styles to tantalize your taste buds. 
+                    From classic blueberry muffins to rich chocolate chip delights, 
+                    muffins are the ultimate comfort food. These small, 
+                    baked wonders are perfect for breakfast, snacks, or dessert.
+                    The aroma of freshly baked muffins wafting through the kitchen is simply 
+                    irresistible. Imagine taking a bite of a warm, moist banana nut muffin, 
+                    where the sweet, ripe bananas blend perfectly with the crunchy walnuts. 
+                    Alternatively, a zesty lemon poppy seed muffin can provide a burst of citrusy 
+                    freshness to kickstart your day.
+                    Muffins aren't just about flavor; 
+                    they're about creativity too. You can experiment with a multitude of ingredients, 
+                    from fresh fruits to spices, and even vegetables. 
+                    Pumpkin muffins with a hint of cinnamon or savory cornbread muffins with 
+                    jalapeños offer a twist to the traditional muffin experience.
+                    Whether you prefer them with a crumbly streusel topping, a sugary glaze, 
+                    or a simple dusting of powdered sugar, muffins are a versatile indulgence. 
+                    So, why not bake your own batch today and savor the joy of homemade muffins, 
+                    straight from the oven to your plate?
+                </p>
+            </section>
+            <!-- facts -->
+            <section>
+                <h2>Facts about Muffin</h2>
             </section>
         </div>
     </main>
