--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
             <!-- facts -->
             <section>
                 <h2>Facts about Muffin</h2>
+                    <ul id="lfm">
+                        <li>Blueberry muffins, chocolate chip delights, zesty lemon poppy seed; muffin flavors for all.</li>
+                        <li>Warm, moist banana nut muffin, or savory cornbread jalapeño twist; muffin creativity explored.</li>
+                        <li>Streusel topping, sugary glaze, or powdered sugar; versatile muffin indulgence. Homemade joy from oven to plate.</li>
+                    </ul>
+            </section>
+            <!-- form -->
+            <section>
+                <h2>Contact to learn more</h2>
+                <div class="ct-f">
+                    <form>
+                        <label for="name">Your Name</label>
+                        <input name="name" id="name" type="text" value="Jhon">
+                    </form>
+                </div>
             </section>
         </div>
     </main>
