--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 <div class="ct-f">
                     <form>
                         <label for="name">Your Name</label>
-                        <input name="name" id="name" type="text" value="Jhon">
+                        <input name="name" id="name" type="text" value="Jhon wick">
+                        <label for="email">Your Email</label>
+                        <input name="email" id="email" type="text" value="muffindog@gmail.com">
                     </form>
                 </div>
             </section>
