--- a/index.html
+++ b/index.html
@@ -70,12 +70,14 @@
             <!-- form -->
             <section>
                 <h2>Contact to learn more</h2>
-                <div class="ct-f">
-                    <form>
+                <div>
+                    <form class="ct-f">
                         <label for="name">Your Name</label>
                         <input name="name" id="name" type="text" value="Jhon wick">
                         <label for="email">Your Email</label>
                         <input name="email" id="email" type="text" value="muffindog@gmail.com">
+                        <label for="message">Your Message</label>
+                        <textarea name="message" rows="10" cols="30"></textarea>
                     </form>
                 </div>
             </section>
