--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
                         <label>Would you like to visit Jhon Wick's muffin?</label>
                         <div id="formradio">
                             <div>
-                                <input type="radio" id="yes" name="visit" value="yes">
                                 <label for="yes">Yes</label>
+                                <input type="radio" id="yes" name="visit" value="yes">
                             </div>
                             <div>
-                                <input type="radio" id="no" name="visit" value="no">
                                 <label for="no">No</label>
+                                <input type="radio" id="no" name="visit" value="no">
                             </div>
                             <div>
+                                <label class="fitwidth" for="nodie">I don't want to die</label>
                                 <input type="radio" id="nodie" name="visit" value="nmodie">
-                                <label for="nodie">I don't want to die</label>
                             </div>
                         </div>
                         <input id="submit" type="submit" value="Submit">
