--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!-- life -->
             <section>
                 <h2>Life of a Muffin</h2>
-                <p>Muffins, those delectable treats, 
+                <p> <img id="muffin-p" src="image/muffin-pic.jpg">Muffins, those delectable treats, 
                     come in a variety of flavors and styles to tantalize your taste buds. 
                     From classic blueberry muffins to rich chocolate chip delights, 
                     muffins are the ultimate comfort food. These small, 
