--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </div>
         <nav>
             <ul>
-                <li>HOME</li>
+                <li class="menu-btn">HOME</li>
                 <span> </span>
-                <li>STORY</li>
+                <li class="menu-btn">STORY</li>
                 <span> </span>
-                <li>CONTACT</li>
+                <li class="menu-btn">CONTACT</li>
             </ul>
         </nav>
     </header>
