--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <nav>
             <ul>
                 <li class="menu-btn">HOME</li>
-                <span> </span>
+                <li class="midline"> </li>
                 <li class="menu-btn">STORY</li>
-                <span> </span>
+                <li class="midline"> </li>
                 <li class="menu-btn">CONTACT</li>
             </ul>
         </nav>
@@ -37,7 +37,7 @@
             <!-- life -->
             <section>
                 <h2>Life of a Muffin</h2>
-                <p> <img id="muffin-p" src="image/muffin-pic.jpg">Muffins, those delectable treats, 
+                <p> <img id="muffin-p" src="image/muffin-pic.jpg" alt="a cool muffin pic">Muffins, those delectable treats, 
                     come in a variety of flavors and styles to tantalize your taste buds. 
                     From classic blueberry muffins to rich chocolate chip delights, 
                     muffins are the ultimate comfort food. These small, 
@@ -78,7 +78,7 @@
                         <label for="email">Your Email</label>
                         <input name="email" id="email" type="text" value="muffindog@gmail.com">
                         <label for="message">Your Message</label>
-                        <textarea name="message"></textarea>
+                        <textarea id="message" name="message"></textarea>
                         <!-- radio option -->
                         <label>Would you like to visit Jhon Wick's muffin?</label>
                         <div id="formradio">
