--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </ul>
             </section>
             <!-- form -->
-            <section>
+            <section id="divofform">
                 <h2>Contact to learn more</h2>
                 <div>
                     <form class="ct-f">
