--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <!-- js -->
     <!-- <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://julian.com/research/velocity/vmd.min.js"></script>
-    <script src="function/functions.js"></script> -->
+    <script src="https://julian.com/research/velocity/vmd.min.js"></script>
+    <script src="function/functions.js"></script>
 </head>
 <body>
     <header>
         <div id="borad">
             <h1>legendary Muffin</h1>
         </div>
+        <div id="stickpoint"></div>
             <nav id="menu-bar">
                 <ul>
                     <li class="menu-btn" id="btn-home"><a href="#home">HOME</a></li>
