--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/2.0.6/velocity.min.js" integrity="sha512-+VS2+Nl1Qit71a/lbncmVsWOZ0BmPDkopw5sXAS2W+OfeceCEd9OGTQWjgVgP5QaMV4ddqOIW9XLW7UVFzkMAw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/2.0.6/velocity.ui.min.js" integrity="sha512-dHdYPMJdRE6BN86nkX0l+uKVrFJRLH+FgL8pxiJ0a3YzMTwIXb8OwaU7Ot5Y7nxqoAc/bZ1yNiLjEV5v4d9Xuw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="function/functions.js"></script>
+    <script src="morefun/functions.js"></script>
 </head>
 <body>
     <header>
